--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="content ps-0 ps-lg-6">
+          <div class="content ps-lg-6">
             <p>Votos e Versos é um coletivo de músicos talentosos que se uniram para criar uma experiência musical
               única.
               Nossa jornada é moldada pela busca constante da expressão artística e pelo desejo de criar músicas que
