--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">Sobre nós</a></li>
           <li><a href="#services">Serviços</a></li>
-          <li><a href="#Agenda">Agenda</a></li>
+          <li><a href="#schedule">Agenda</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -67,9 +67,9 @@
         <div class="col-lg-6 order-1 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2>Bem vindo ao <span>Votos & Versos</span></h2>
           <p>Grupo musical que combina harmonias cativantes com letras que tocam a alma.
-            Somos uma fusão de talento, paixão e criatividade, prontos para compartilhar nossa música
+            Somos uma fusão de talento, paixão e criatividade, prontos para compartilhar música
             através de cada acorde e verso.</p>
-          <p class="text-center">Cantando por amor, músicas para casamentos!</p>
+          <p class="text-center">Cantando por amor, músicas para casamentos ♫♪</p>
         </div>
         <div class="col-lg-6 order-2 order-lg-2 d-flex justify-content-center">
           <img class="img-fluid img-band" src="./assets/img/banda.jpg" alt="" srcset="">
@@ -91,15 +91,14 @@
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="content ps-lg-6">
-            <p>Votos e Versos é um coletivo de músicos talentosos que se uniram para criar uma experiência musical
+            <p>Votos & Versos é um coletivo de músicos talentosos que se uniram para criar uma experiência musical
               única.
               Nossa jornada é moldada pela busca constante da expressão artística e pelo desejo de criar músicas que
-              ressoem com a sua vida. Cada membro do grupo contribui com sua voz e talento único para nossa sonoridade
+              ressoem com a sua vida. Cada membro do grupo contribui com suas vozes e talento único para nossa sonoridade
               distintiva.
             </p>
-            <p>Nossas canções são uma viagem emocional. De baladas suaves que acariciam sua alma a batidas vibrantes que
+            <p>Nossas interpretações são uma viagem emocional. Harmonias suaves que acariciam sua alma a batidas vibrantes que
               fazem seu coração bater mais forte, cada faixa é uma história que queremos compartilhar com você.
-              Em nossas letras, exploramos temas que vão desde o amor e a perda até a esperança e a superação.
               Queremos que nossa música seja a trilha sonora da sua vida, tocando em momentos especiais e cotidianos.
             </p>
           </div>
@@ -114,7 +113,7 @@
                 <p>Voz</p>
               </div>
               <div class="photo-artist">
-                <img class="img-fluid" src="./assets/img/perfil-adriana.png" alt="">
+                <a href="https://www.instagram.com/drii_rsantos" target="_blank" rel="noreferrer noopener"><img class="img-fluid" src="./assets/img/perfil-adriana.png" alt="Adriana Rocha"></a>
               </div>
               <h3>Adriana Rocha</h3>
               <p>Com sua voz magnética, traz encanto e emoção a cada nota, transformando cada canção em uma experiência
@@ -128,10 +127,10 @@
                 <p>Voz</p>
               </div>
               <div class="photo-artist">
-                <img class="img-fluid" src="./assets/img/perfil-mateus.png" alt="">
+                <a href="https://www.instagram.com/mateussouza50/" target="_blank" rel="noreferrer noopener"><img class="img-fluid" src="./assets/img/perfil-mateus.png" alt="Mateus Souza"></a>
               </div>
               <h3>Mateus Souza</h3>
-              <p>Alma emotiva da banda, suas harmonias vocais adicionam profundidade e paixão a cada performance,
+              <p>Suas harmonias vocais adicionam profundidade e paixão a cada performance,
                 tocando os corações da plateia.</p>
             </div>
           </div>
@@ -142,11 +141,11 @@
                 <p>Teclado</p>
               </div>
               <div class="photo-artist">
-                <img class="img-fluid" src="./assets/img/perfil-tiago.png" alt="">
+                <a href="https://www.instagram.com/ssantos_tiago/" target="_blank" rel="noreferrer noopener"><img class="img-fluid" src="./assets/img/perfil-tiago.png" alt="Tiago Santos"></a>
               </div>
               <h3>Tiago Santos</h3>
               <p>Mestre do teclado, cria harmonias mágicas que envolvem nossas músicas com um toque de sofisticação e
-                beleza, elevando nossa música a um novo patamar.</p>
+                beleza.</p>
             </div>
           </div>
 
@@ -156,11 +155,11 @@
                 <p>Violão</p>
               </div>
               <div class="photo-artist">
-                <img class="img-fluid" src="./assets/img/perfil-jhony.png" alt="">
+                <a href="https://www.instagram.com/jhonylopesss/" target="_blank" rel="noreferrer noopener"><img class="img-fluid" src="./assets/img/perfil-jhony.png" alt="Jhony Lopes"></a>
               </div>
               <h3>Jhony Lopes</h3>
               <p>Talentoso artífice das melodias de nosso grupo, seu violão cativante cria a base perfeita para nossas
-                canções, transmitindo emoção e conexão com nosso público.</p>
+                canções.</p>
             </div>
           </div>
         </div>
@@ -168,17 +167,19 @@
     </section><!--Fim Sessão Sobre -->
 
     <!-- ======= Call To Action Section ======= -->
-    <section id="play-videos" class="play-videos" data-aos="flip-up">
+    <section id="play-videos" class="play-videos d-flex flex-column align-items-center justify-content-center" data-aos="flip-up">
       <div class="container text-center" data-aos="zoom-out">
-        <a href="https://www.youtube.com/watch?v=artng5iskMw&ab_channel=FreiGilson%2FSomdoMonte-OFICIAL"
+        <a href="https://youtu.be/kRuF2IfLvDU" data-type="video"
           class="glightbox play-btn"></a>
-        <h3>Eternos Amigos (Anjos de Resgate)</h3>
+        <h3>Amigos pela Fé</h3>
         <p>
           • Vocal: Adriana Rocha e Mateus Souza <br>
           • Violão: Jhony Lopes <br>
-          • Teclado: Tiago Santos.
+          • Teclado: Tiago Santos
         </p>
       </div>
+      <a href="./assets/pages/videos.html"><button type="button" href="./assets/pages/videos.html">Mais Videos</button></a>
+   
     </section><!--Fim Call To Action Section -->
 
     <!-- ======= Sessão Nossos Serviços ======= -->
@@ -228,14 +229,11 @@
             </div>
           </div><!-- Fim Musico Item -->
 
-
-
         </div>
-
       </div>
     </section><!--Fim Sessão Nossos Serviços -->
 
-    <section id="Agenda" class="">
+    <section id="schedule" class="">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -244,16 +242,12 @@
         </div>
 
         <div class="" data-aos="fade-up" data-aos-delay="100">
-          <div class="content">
-            <ul class="agenda">
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
-              <li>27/10/2023: Casamento Miriam & Carlos</li>
+            <ul class="schedule">
+              <li>Eventos Anteriores:</li>
+              <li>Casamento Isaac & Larissa: 16/09/2023 (Sábado)</li>
+              <li>♫♪♫♪♫♪♫</li><br>
+              <h5>Agenda Aberta</h5>
             </ul>
-          </div>
         </div>
       </div>
     </section><!--Fim Sessão Sobre -->
@@ -296,9 +290,9 @@
                   target="_blank" rel="noreferrer noopener"><i class="bi bi-whatsapp flex-shrink-0"></i></a>
                 <div>
                   <h4>WhatsApp:</h4>
-                  <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.link%2F3s42hz&e=AT3qSGPKbK4Kn2K2Gd8EST8Sx8KK4cylcOOW5V4otPNsb6vC1W23CV8OgnL2Okn9O668BkXFJiyVCNYcOrLpk_jjBU0GtR4QyZK2sg"
+                  <a href="https://wa.me/5577988275353?text=Ol%C3%A1%2C+tudo+bem%3F+Gostaria+de+saber+mais+sobre+o+trabalho+da+Votos%C2%A0%26%C2%A0Versos."
                     target="_blank" rel="noreferrer noopener">
-                    <p>(77) 98888-9999</p>
+                    <p>(77) 98827-5353</p>
                   </a>
                 </div>
               </div><!-- Fim Item Info -->
