--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-  <!-- ======= Header ======= -->
+  <!--  Header  -->
   <header id="header" class="header d-flex align-items-center">
 
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -60,7 +60,7 @@
   </header>
   <!--Fim Header -->
 
-  <!-- ======= Home Section ======= -->
+  <!--  Home Section  -->
   <section id="home" class="home">
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
@@ -81,7 +81,7 @@
   <!--Fim Home Section -->
 
   <main id="main">
-    <!-- ======= Sessão Sobre ======= -->
+    <!--  Sessão Sobre  -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
@@ -166,7 +166,7 @@
       </div>
     </section><!--Fim Sessão Sobre -->
 
-    <!-- ======= Call To Action Section ======= -->
+    <!--  Videos Section  -->
     <section id="play-videos" class="play-videos d-flex flex-column align-items-center justify-content-center" data-aos="flip-up">
       <div class="container text-center" data-aos="zoom-out">
         <a href="https://youtu.be/kRuF2IfLvDU" data-type="video"
@@ -180,9 +180,9 @@
       </div>
       <a href="./assets/pages/videos.html"><button type="button" href="./assets/pages/videos.html">Mais Videos</button></a>
    
-    </section><!--Fim Call To Action Section -->
+    </section><!--Fim Videos Section -->
 
-    <!-- ======= Sessão Nossos Serviços ======= -->
+    <!--  Sessão Nossos Serviços  -->
     <section id="services" class="services sections-bg">
       <div class="container" data-aos="fade-up">
 
@@ -252,7 +252,7 @@
       </div>
     </section><!--Fim Sessão Sobre -->
 
-    <!-- ======= Sessão Contato ======= -->
+    <!--  Sessão Contato  -->
     <section id="contact" class="contact" style="background-color: #F4F1E8">
       <div class="container" data-aos="fade-right">
 
@@ -272,7 +272,7 @@
                   <h4>Localização:</h4>
                   <p>Vitória da Conquista</p>
                 </div>
-              </div><!-- Fim Item Info -->
+              </div>
 
               <div class="info-item d-flex">
                 <a href="https://www.instagram.com/votoseversos/?hl=pt-br" target="_blank" rel="noreferrer noopener"><i
@@ -283,7 +283,7 @@
                     <p>@votoseversos</p>
                   </a>
                 </div>
-              </div><!-- Fim Item Info -->
+              </div>
 
               <div class="info-item d-flex">
                 <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.link%2F3s42hz&e=AT3qSGPKbK4Kn2K2Gd8EST8Sx8KK4cylcOOW5V4otPNsb6vC1W23CV8OgnL2Okn9O668BkXFJiyVCNYcOrLpk_jjBU0GtR4QyZK2sg"
@@ -295,19 +295,17 @@
                     <p>(77) 98827-5353</p>
                   </a>
                 </div>
-              </div><!-- Fim Item Info -->
+              </div>
 
             </div>
           </div>
-
-
         </div>
       </div>
     </section><!--Fim Sessão Contato -->
 
   </main><!--Fim #main -->
 
-  <!-- ======= Footer ======= -->
+  <!--  Footer  -->
   <footer id="footer" class="footer">
 
     <div class="container mt-4">
